@@ -1,3 +1,5 @@
+HEAD
+	+ Set up services certificates when a new CA is created
 4.2
 	+ Update version to 4.2
 4.1
